--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neweb-pack",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,9 @@
     "@types/webpack": "^4.1.3",
     "globby": "^8.0.1",
     "mkdirp": "^0.5.1",
+    "path": "^0.12.7",
+    "url": "^0.11.0",
+    "util": "^0.10.3",
     "webpack": "^4.3.0"
   }
 }
